# openapi.json
@@ -334,6 +334,30 @@
 									"items": {
 										"additionalProperties": false,
 										"properties": {
+											"authAllowedEmails": {
+												"items": {
+													"type": "string"
+												},
+												"type": "array"
+											},
+											"authAllowedGroups": {
+												"items": {
+													"type": "string"
+												},
+												"type": "array"
+											},
+											"authAllowedUserIds": {
+												"items": {
+													"type": "string"
+												},
+												"type": "array"
+											},
+											"authProviders": {
+												"items": {
+													"type": "string"
+												},
+												"type": "array"
+											},
 											"authRequired": {
 												"type": "boolean"
 											},
@@ -602,6 +626,10 @@
 											}
 										},
 										"required": [
+											"authAllowedEmails",
+											"authAllowedGroups",
+											"authAllowedUserIds",
+											"authProviders",
 											"authRequired",
 											"autoscaleEligible",
 											"buildSource",
@@ -793,6 +821,30 @@
 								"schema": {
 									"additionalProperties": false,
 									"properties": {
+										"authAllowedEmails": {
+											"items": {
+												"type": "string"
+											},
+											"type": "array"
+										},
+										"authAllowedGroups": {
+											"items": {
+												"type": "string"
+											},
+											"type": "array"
+										},
+										"authAllowedUserIds": {
+											"items": {
+												"type": "string"
+											},
+											"type": "array"
+										},
+										"authProviders": {
+											"items": {
+												"type": "string"
+											},
+											"type": "array"
+										},
 										"authRequired": {
 											"type": "boolean"
 										},
@@ -1056,6 +1108,10 @@
 										}
 									},
 									"required": [
+										"authAllowedEmails",
+										"authAllowedGroups",
+										"authAllowedUserIds",
+										"authProviders",
 										"authRequired",
 										"autoscaleEligible",
 										"buildSource",
@@ -1254,6 +1310,30 @@
 								"schema": {
 									"additionalProperties": false,
 									"properties": {
+										"authAllowedEmails": {
+											"items": {
+												"type": "string"
+											},
+											"type": "array"
+										},
+										"authAllowedGroups": {
+											"items": {
+												"type": "string"
+											},
+											"type": "array"
+										},
+										"authAllowedUserIds": {
+											"items": {
+												"type": "string"
+											},
+											"type": "array"
+										},
+										"authProviders": {
+											"items": {
+												"type": "string"
+											},
+											"type": "array"
+										},
 										"authRequired": {
 											"type": "boolean"
 										},
@@ -1517,6 +1597,10 @@
 										}
 									},
 									"required": [
+										"authAllowedEmails",
+										"authAllowedGroups",
+										"authAllowedUserIds",
+										"authProviders",
 										"authRequired",
 										"autoscaleEligible",
 										"buildSource",
@@ -1788,6 +1872,30 @@
 								"schema": {
 									"additionalProperties": false,
 									"properties": {
+										"authAllowedEmails": {
+											"items": {
+												"type": "string"
+											},
+											"type": "array"
+										},
+										"authAllowedGroups": {
+											"items": {
+												"type": "string"
+											},
+											"type": "array"
+										},
+										"authAllowedUserIds": {
+											"items": {
+												"type": "string"
+											},
+											"type": "array"
+										},
+										"authProviders": {
+											"items": {
+												"type": "string"
+											},
+											"type": "array"
+										},
 										"authRequired": {
 											"type": "boolean"
 										},
@@ -2051,6 +2159,10 @@
 										}
 									},
 									"required": [
+										"authAllowedEmails",
+										"authAllowedGroups",
+										"authAllowedUserIds",
+										"authProviders",
 										"authRequired",
 										"autoscaleEligible",
 										"buildSource",
